# Web3Buildspace

./: .gitmodules  README.md
01.bitwave/bitwave/: hardhat.config.js  package-lock.json  package.json
01.bitwave/bitwave/contracts/: WavePortal.sol
01.bitwave/bitwave/scripts/: run.js
01.bitwave/waveportal-starter-project/: package-lock.json
01.bitwave/waveportal-starter-project/src/: App.jsx
01.bitwave/waveportal-starter-project/src/utils/: WavePortal.json
02.epic-nfts/epic-nfts/: hardhat.config.js  package-lock.json  package.json
02.epic-nfts/epic-nfts/contracts/: MyEpicNFT.sol
02.epic-nfts/epic-nfts/scripts/: run.js
02.epic-nfts/nft-starter-project/src/: App.jsx
02.epic-nfts/nft-starter-project/src/utils/: MyEpicNFT.json
aos/: chatroom.lua  proxy.lua
aos/aogent/: chat.lua  index.js  package.json
aos/aogent/scripts/: init.lua  test.lua
aos/aogent/utils/: queue.lua
autogen/: .gitignore  design.md  main.py  pyproject.toml  setup.sh
crypto-bert/: .gitignore  main.py  pyproject.toml
cs251/Dex/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
cs251/Dex/contracts/: exchange.sol  token.sol
cs251/Dex/scripts/: deploy_exchange.js  deploy_token.js
cs251/Dex/web_app/: abi-decoder.js  exchange.js  index.html  style.css
cs251/MerkleProject/: prover.py  verifier.py
dutch-auction/: package.json
dutch-auction/script/: DutchAuction.s.sol
dutch-auction/src/: DutchAuction.sol
dutch-auction/test/: DutchAuction.t.sol
libp2p-examples/http-proxy/: README.md  go.mod  go.sum  proxy.go
libp2p-examples/libp2p-host/: go.mod  go.sum  host.go
pegs-dai/: hardhat.config.js  package-lock.json  package.json
pegs-dai/contracts/: PegsDai.sol
pegs-dai/scripts/: deploy.js  run.js
single-ai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
single-ai/docs/: api.md  design_doc.md
single-ai/scripts/: fetch_tweets.py  generate_prompt.py
single-ai/single_ai/: agent.py  django_setup.py  models.py  server.py  settings.py  urls.py
single-ai/single_ai/migrations/: 0001_initial.py  0002_systemprompt.py
single-ai/tests/: curl_test.sh
sol101/: connection.js  generate_address.js  package.json  pnpm-lock.yaml  send_txn.js  subscribe.js
sui101/todo_list/sources/: todo_list.move
