[project]
name = "crypto-bert"
version = "0.1.0"
description = ""
authors = [{ name = "yikedu", email = "duyike2021@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["transformers (>=4.48.2,<5.0.0)", "torch (>=2.6.0,<3.0.0)", "torchvision (>=0.21.0,<0.22.0)", "openai (>=1.61.1,<2.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
